[1.0.0-beta] Documentation, abstraction and additional QOL